# 2017-2018-computing-thinking

./: .gitignore  AI_WeiQi_Architecture_Refactory.pptx  README.md  Untitled Diagram.xml
Docker/: README.md
Docker/AI/: Dockerfile  requirements.txt  server.py  simpleAI.py
Docker/MuGo/: .simpleAI.py.swp  Dockerfile  requirements.txt  simpleAI.py  strategies.py
Docker/WeiQi/: AI.py  Dockerfile  requirements.txt
Docker/v1/: AI_WeiQi_Architecture_Refactory.pptx  FlowDiagram_ToyhouseGo.xml  README.md  Untitled Diagram.xml  docker-compose.yml  docker-compose_debug.yml  docker-compose_gpu.yml  docker-compose_ns_101160651.yml  docker-compose_ns_smartkit.yml
Docker/v2/: README.md  docker-compose.yml  mariadb_mediawiki_piwik.yml  mariadb_mediawiki_piwik_netlify_jenkins.yml  mariadb_mediawiki_piwik_phabricator.yml  phabricator.yml
Docker/v2/score-estimator/ogs/: CMakeLists.txt  Dockerfile
Docker/v2/score-estimator/ogs/tools/: 9358392.game
GO/: AI.py  README.md  game_function.py  gamemain.py  manger.py  server.py  simpleAI.py  test.py  user.py
GO/MuGo/: requirements.txt  server.py  (+1 more)
Jupyter-MoGo-master/: features.ipynb  gnugo_vs_gnugo.ipynb  gnugo_vs_gnugo.py  go.ipynb  gtp.ipynb  gtp.py  load_data_sets.ipynb  main.ipynb  policy.ipynb  sgf_wrapper.ipynb  strategies.ipynb  test.py  utils.ipynb
WeiQi/: AI.py  Dockerfile  game_function.py  requirements.txt  server.py  test.py  user.py
mugo/: .gitignore  README.md  features.py  go.py  interface_to_website.py  load_data_sets.py  main.py  policy.py  requirements.txt  setup.py  sgf_wrapper.py  strategies.py  utils.py
(+427 files in other folders)
